Added shaders to windows project

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -130,6 +130,31 @@
       <Project>{d58f34be-ffcb-485f-9294-460ea261d0ed}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\data\shaders\bin_categorizer.shader" />
+    <None Include="..\data\shaders\bin_dispatcher.shader" />
+    <None Include="..\data\shaders\bin_estimator.shader" />
+    <None Include="..\data\shaders\compose.shader" />
+    <None Include="..\data\shaders\dummy.shader" />
+    <None Include="..\data\shaders\final_raster.shader" />
+    <None Include="..\data\shaders\init_counters.shader" />
+    <None Include="..\data\shaders\mask_raster.shader" />
+    <None Include="..\data\shaders\mask_sort.shader" />
+    <None Include="..\data\shaders\pieces\data.shader" />
+    <None Include="..\data\shaders\pieces\frustum.shader" />
+    <None Include="..\data\shaders\pieces\funcs.shader" />
+    <None Include="..\data\shaders\pieces\lighting.shader" />
+    <None Include="..\data\shaders\pieces\macros.shader" />
+    <None Include="..\data\shaders\pieces\rect.shader" />
+    <None Include="..\data\shaders\pieces\viewport.shader" />
+    <None Include="..\data\shaders\raster_bin.shader" />
+    <None Include="..\data\shaders\raster_block.shader" />
+    <None Include="..\data\shaders\raster_tile.shader" />
+    <None Include="..\data\shaders\setup.shader" />
+    <None Include="..\data\shaders\simple.shader" />
+    <None Include="..\data\shaders\tile_dispatcher.shader" />
+    <None Include="..\notes.wiki" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
