raster_bin_handling_collisions: Computing collision mask (with glitches)

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -148,6 +148,7 @@
     <None Include="..\data\shaders\pieces\rect.shader" />
     <None Include="..\data\shaders\pieces\viewport.shader" />
     <None Include="..\data\shaders\raster_bin_fastest.shader" />
+    <None Include="..\data\shaders\raster_bin_handling_collisions.shader" />
     <None Include="..\data\shaders\raster_bin_mixed.shader" />
     <None Include="..\data\shaders\raster_bin_reduction_samples.shader" />
     <None Include="..\data\shaders\raster_block.shader" />
