Added older version of raster_bin; added some shader patches

--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -181,5 +181,8 @@
     <None Include="..\data\shaders\raster_bin_handling_collisions.shader">
       <Filter>shaders</Filter>
     </None>
+    <None Include="..\data\shaders\raster_bin_16x16.shader">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
