--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -147,6 +147,7 @@
     <None Include="..\data\shaders\pieces\macros.shader" />
     <None Include="..\data\shaders\pieces\rect.shader" />
     <None Include="..\data\shaders\pieces\viewport.shader" />
+    <None Include="..\data\shaders\raster_bin_16x16.shader" />
     <None Include="..\data\shaders\raster_bin_fastest.shader" />
     <None Include="..\data\shaders\raster_bin_handling_collisions.shader" />
     <None Include="..\data\shaders\raster_bin_mixed.shader" />
