raster_tile: Counting per-block tris (WIP)

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -154,6 +154,7 @@
     <None Include="..\data\shaders\raster_bin_reduction_samples.shader" />
     <None Include="..\data\shaders\raster_block.shader" />
     <None Include="..\data\shaders\raster_tile.shader" />
+    <None Include="..\data\shaders\raster_tile_fastest.shader" />
     <None Include="..\data\shaders\setup.shader" />
     <None Include="..\data\shaders\simple.shader" />
     <None Include="..\data\shaders\tile_dispatcher.shader" />
