Sharing structures code between C++ and GLSL

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -119,6 +119,7 @@
     <ClInclude Include="..\src\scene.h" />
     <ClInclude Include="..\src\scene_convert.h" />
     <ClInclude Include="..\src\scene_setup.h" />
+    <ClInclude Include="..\src\shader_structs.h" />
     <ClInclude Include="..\src\shading.h" />
     <ClInclude Include="..\src\simple_renderer.h" />
     <ClInclude Include="..\src\stb_rect_pack.h" />
@@ -140,19 +141,16 @@
     <None Include="..\data\shaders\init_counters.shader" />
     <None Include="..\data\shaders\mask_raster.shader" />
     <None Include="..\data\shaders\mask_sort.shader" />
-    <None Include="..\data\shaders\pieces\data.shader" />
+    <None Include="..\data\shaders\pieces\declarations.shader" />
     <None Include="..\data\shaders\pieces\frustum.shader" />
     <None Include="..\data\shaders\pieces\funcs.shader" />
     <None Include="..\data\shaders\pieces\lighting.shader" />
     <None Include="..\data\shaders\pieces\macros.shader" />
     <None Include="..\data\shaders\pieces\raster.shader" />
     <None Include="..\data\shaders\pieces\rect.shader" />
+    <None Include="..\data\shaders\pieces\structures.shader" />
     <None Include="..\data\shaders\pieces\viewport.shader" />
-    <None Include="..\data\shaders\raster_bin_16x16.shader" />
     <None Include="..\data\shaders\raster_bin_fastest.shader" />
-    <None Include="..\data\shaders\raster_bin_handling_collisions.shader" />
-    <None Include="..\data\shaders\raster_bin_mixed.shader" />
-    <None Include="..\data\shaders\raster_bin_reduction_samples.shader" />
     <None Include="..\data\shaders\raster_block.shader" />
     <None Include="..\data\shaders\raster_tile_fastest.shader" />
     <None Include="..\data\shaders\setup.shader" />
