--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -178,5 +178,8 @@
     <None Include="..\data\shaders\pieces\declarations.shader">
       <Filter>shaders\pieces</Filter>
     </None>
+    <None Include="..\data\shaders\bin_row_dispatcher.shader">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
