Started working on raster_medium (forked from raster_low, WIP)

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -146,6 +146,7 @@
     <None Include="..\data\shaders\pieces\structures.shader" />
     <None Include="..\data\shaders\pieces\viewport.shader" />
     <None Include="..\data\shaders\raster_low.shader" />
+    <None Include="..\data\shaders\raster_medium.shader" />
     <None Include="..\data\shaders\setup.shader" />
     <None Include="..\data\shaders\simple.shader" />
     <None Include="..\notes.wiki" />
