--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -157,5 +157,8 @@
     <None Include="..\data\shaders\pieces\structures.shader">
       <Filter>shaders\pieces</Filter>
     </None>
+    <None Include="..\data\shaders\raster_medium.shader">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
