--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -145,9 +145,9 @@
     <None Include="..\data\shaders\pieces\rect.shader" />
     <None Include="..\data\shaders\pieces\structures.shader" />
     <None Include="..\data\shaders\pieces\viewport.shader" />
+    <None Include="..\data\shaders\quad_setup.shader" />
     <None Include="..\data\shaders\raster_low.shader" />
     <None Include="..\data\shaders\raster_medium.shader" />
-    <None Include="..\data\shaders\setup.shader" />
     <None Include="..\data\shaders\simple.shader" />
     <None Include="..\notes.wiki" />
   </ItemGroup>
