--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -124,9 +124,6 @@
     <None Include="..\data\shaders\init_counters.shader">
       <Filter>shaders</Filter>
     </None>
-    <None Include="..\data\shaders\setup.shader">
-      <Filter>shaders</Filter>
-    </None>
     <None Include="..\data\shaders\simple.shader">
       <Filter>shaders</Filter>
     </None>
@@ -158,6 +155,9 @@
       <Filter>shaders\pieces</Filter>
     </None>
     <None Include="..\data\shaders\raster_medium.shader">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="..\data\shaders\quad_setup.shader">
       <Filter>shaders</Filter>
     </None>
   </ItemGroup>
