--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -140,7 +140,7 @@
     <None Include="..\data\shaders\pieces\funcs.shader" />
     <None Include="..\data\shaders\pieces\lighting.shader" />
     <None Include="..\data\shaders\pieces\macros.shader" />
-    <None Include="..\data\shaders\pieces\raster.shader" />
+    <None Include="..\data\shaders\pieces\shading.shader" />
     <None Include="..\data\shaders\pieces\rect.shader" />
     <None Include="..\data\shaders\pieces\scanline.shader" />
     <None Include="..\data\shaders\pieces\structures.shader" />
