--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -136,12 +136,9 @@
     <None Include="..\data\shaders\bin_dispatcher.shader" />
     <None Include="..\data\shaders\compose.shader" />
     <None Include="..\data\shaders\dummy.shader" />
-    <None Include="..\data\shaders\pieces\frustum.shader" />
-    <None Include="..\data\shaders\pieces\funcs.shader" />
-    <None Include="..\data\shaders\pieces\lighting.shader" />
-    <None Include="..\data\shaders\pieces\macros.shader" />
+    <None Include="..\data\shaders\funcs.glsl" />
+    <None Include="..\data\shaders\macros.glsl" />
     <None Include="..\data\shaders\pieces\shading.shader" />
-    <None Include="..\data\shaders\pieces\rect.shader" />
     <None Include="..\data\shaders\pieces\scanline.shader" />
     <None Include="..\data\shaders\pieces\structures.shader" />
     <None Include="..\data\shaders\pieces\timers.shader" />
@@ -149,7 +146,8 @@
     <None Include="..\data\shaders\quad_setup.shader" />
     <None Include="..\data\shaders\raster_low.shader" />
     <None Include="..\data\shaders\raster_high.shader" />
-    <None Include="..\data\shaders\simple.shader" />
+    <None Include="..\data\shaders\simple.glsl" />
+    <None Include="..\data\shaders\structures.glsl" />
     <None Include="..\notes.wiki" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
