--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\data\shaders\bin_categorizer.glsl" />
+    <None Include="..\data\shaders\bin_counter.glsl" />
     <None Include="..\data\shaders\bin_dispatcher.glsl" />
     <None Include="..\data\shaders\compose.glsl" />
     <None Include="..\data\shaders\quad_setup.glsl" />
