--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -142,5 +142,8 @@
     <None Include="..\data\shaders\simple.glsl">
       <Filter>shaders</Filter>
     </None>
+    <None Include="..\data\shaders\bin_counter.glsl">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
