--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="..\src\wavefront_obj.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\tri_optimizer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\lucid_app.h">
