Added basic class & shader for PathTracer

--- a/windows/lucid.vcxproj
+++ b/windows/lucid.vcxproj
@@ -100,6 +100,7 @@
     <ClCompile Include="..\src\lucid_app.cpp" />
     <ClCompile Include="..\src\lucid_renderer.cpp" />
     <ClCompile Include="..\src\meshlet.cpp" />
+    <ClCompile Include="..\src\path_tracer.cpp" />
     <ClCompile Include="..\src\quad_generator.cpp" />
     <ClCompile Include="..\src\scene.cpp" />
     <ClCompile Include="..\src\scene_convert.cpp" />
@@ -116,6 +117,7 @@
     <ClInclude Include="..\src\lucid_pch.h" />
     <ClInclude Include="..\src\lucid_renderer.h" />
     <ClInclude Include="..\src\meshlet.h" />
+    <ClInclude Include="..\src\path_tracer.h" />
     <ClInclude Include="..\src\quad_generator.h" />
     <ClInclude Include="..\src\scene.h" />
     <ClInclude Include="..\src\scene_convert.h" />
@@ -148,6 +150,7 @@
     <None Include="..\data\shaders\shared\structures.glsl" />
     <None Include="..\data\shaders\shared\timers.glsl" />
     <None Include="..\data\shaders\simple.glsl" />
+    <None Include="..\data\shaders\trace.glsl" />
     <None Include="..\notes.wiki" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
