--- a/windows/lucid.vcxproj.filters
+++ b/windows/lucid.vcxproj.filters
@@ -1,113 +1,109 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Source Files">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
     <Filter Include="shaders">
       <UniqueIdentifier>{5409dbe8-9c51-4628-9e3d-9cea4979021e}</UniqueIdentifier>
     </Filter>
     <Filter Include="shaders\shared">
       <UniqueIdentifier>{a0b5a478-b8ac-400e-89a0-57971fec1087}</UniqueIdentifier>
     </Filter>
+    <Filter Include="source">
+      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
+      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\lucid.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\lucid_app.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\lucid_renderer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\meshlet.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\quad_generator.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\scene.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\scene_convert.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\scene_setup.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\shading.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\simple_renderer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\texture_atlas.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\wavefront_obj.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\tri_optimizer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\path_tracer.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\lucid_app.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\lucid_base.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\lucid_pch.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\lucid_renderer.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\meshlet.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\quad_generator.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\scene.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\scene_convert.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\scene_setup.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\shading.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\simple_renderer.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\stb_rect_pack.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\texture_atlas.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\wavefront_obj.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="..\src\shader_structs.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
     </ClInclude>
     <ClInclude Include="..\src\path_tracer.h">
-      <Filter>Header Files</Filter>
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\quad_generator.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\scene.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\scene_convert.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\scene_setup.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\shader_structs.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\shading.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\simple_renderer.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\stb_rect_pack.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\texture_atlas.h">
+      <Filter>source</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\wavefront_obj.h">
+      <Filter>source</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
